# SegsEngine

./: .clang-format  .editorconfig  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  COPYRIGHT.txt  LICENSE.md  README.md  SEGS_Changes.md  doc_paths.cmake  last_upstream_commit  version.cmake
core/: CMakeLists.txt  array.cpp  array.h  bitfield_dynamic.cpp  bitfield_dynamic.h  callable.cpp  callable.h  callable_method_pointer.cpp  callable_method_pointer.h  class_db.cpp  class_db.h  color.cpp  color.h  color_names.inc  command_queue_mt.cpp  command_queue_mt.h  compressed_translation.cpp  compressed_translation.h  configuration.h  configuration.h.cmake  container_tools.h  container_utils.h  core_string_names.cpp  core_string_names.h  cowdata.cpp  cowdata.h  cowdata_impl.h  deque.h  dictionary.cpp  dictionary.h  ecs_registry.cpp  ecs_registry.h  engine.cpp  engine.h  engine_entities.cpp  engine_entities.h  engine_tooling.h  error_list.h  error_macros.cpp  error_macros.h  (+123 more)
core/bind/: core_bind.cpp  core_bind.h
core/build_specific/: CMakeLists.txt  engine_tooling.cpp  object_client.cpp  object_editor.cpp  object_tooling_client.cpp  object_tooling_editor.cpp  translation_client.cpp  translation_editor.cpp
core/crypto/: CMakeLists.txt  crypto.cpp  crypto.h  crypto_core.cpp  crypto_core.h  hashing_context.cpp  hashing_context.h
core/debugger/: CMakeLists.txt  script_debugger.cpp  script_debugger.h
core/doc_support/: doc_data.cpp  doc_data.h
core/input/: input_default.cpp  input_default.h  input_event.cpp  input_event.h  input_map.cpp  input_map.h
core/io/: CMakeLists.txt  compression.cpp  compression.h  config_file.cpp  config_file.h  file_access_buffered.cpp  file_access_buffered.h  file_access_buffered_fa.h  file_access_compressed.cpp  file_access_compressed.h  file_access_encrypted.cpp  file_access_encrypted.h  file_access_memory.cpp  file_access_memory.h  file_access_network.cpp  file_access_network.h  file_access_pack.cpp  file_access_pack.h  file_access_zip.cpp  file_access_zip.h  http_client.cpp  http_client.h  image_loader.cpp  image_loader.h  image_saver.cpp  image_saver.h  ip.cpp  ip.h  ip_address.cpp  ip_address.h  json.cpp  json.h  logger.cpp  logger.h  marshalls.cpp  marshalls.h  multiplayer_api.cpp  multiplayer_api.h  net_socket.cpp  net_socket.h  (+32 more)
core/jlsignal/: DoublyLinkedList.h  FastFunc.h  ObjectPool.cpp  ObjectPool.h  ObjectPoolScopedAllocator.h  ScopedAllocator.h  Signal.h  SignalBase.cpp  SignalBase.h  SignalDefinitions.h  StaticSignalConnectionAllocators.h  Utils.h
core/math/: a_star.cpp  a_star.h  aabb.cpp  aabb.h  audio_frame.cpp  audio_frame.h  basis.cpp  basis.h  bsp_tree.cpp  bsp_tree.h  bvh.h  bvh_abb.h  bvh_cull.inc  bvh_logic.inc  bvh_misc.inc  bvh_pair.inc  bvh_public.inc  bvh_split.inc  bvh_structs.inc  bvh_tree.h  camera_matrix.cpp  camera_matrix.h  convex_hull.cpp  convex_hull.h  delaunay.h  disjoint_set.cpp  disjoint_set.h  expression.cpp  expression.h  face3.cpp  face3.h  geometry.cpp  geometry.h  math_defs.h  math_fieldwise.cpp  math_fieldwise.h  math_funcs.cpp  math_funcs.h  ocree_prev.h  octree.h  (+29 more)
core/memory/: frame_allocator.h  pool_allocator.h
core/os/: CMakeLists.txt  alloc_wrapper.h  dir_access.cpp  dir_access.h  file_access.cpp  file_access.h  input.cpp  input.h  input_event.cpp  input_event.h  keyboard.cpp  keyboard.h  main_loop.cpp  main_loop.h  memory.cpp  memory.h  midi_driver.cpp  midi_driver.h  mutex.cpp  mutex.h  os.cpp  os.h  rw_lock.cpp  rw_lock.h  semaphore.cpp  semaphore.h  spin_lock.h  thread.cpp  thread.h  thread_dummy.cpp  thread_dummy.h  thread_safe.cpp  (+6 more)
drivers/: CMakeLists.txt  register_driver_types.cpp  register_driver_types.h
editor/: CMakeLists.txt  animation_bezier_editor.cpp  animation_bezier_editor.h  animation_track_editor.cpp  animation_track_editor.h  animation_track_editor_plugins.cpp  animation_track_editor_plugins.h  array_property_edit.cpp  array_property_edit.h  audio_stream_preview.cpp  audio_stream_preview.h  cnv.rb  code_editor.cpp  code_editor.h  connections_dialog.cpp  connections_dialog.h  create_dialog.cpp  create_dialog.h  dependency_editor.cpp  dependency_editor.h  dictionary_property_edit.cpp  dictionary_property_edit.h  editor.qrc  editor_about.cpp  editor_about.h  editor_asset_installer.cpp  editor_asset_installer.h  editor_audio_buses.cpp  editor_audio_buses.h  editor_autoload_settings.cpp  editor_autoload_settings.h  editor_data.cpp  editor_data.h  editor_dir_dialog.cpp  editor_dir_dialog.h  editor_export.cpp  editor_export.h  editor_feature_profile.cpp  editor_feature_profile.h  editor_file_dialog.cpp  (+130 more)
main/: CMakeLists.txt  app_icon.h.cmake  default_controller_mappings.h  input_default.cpp  input_default.h  main.cpp  main.h  main_class.cpp  main_class.h  main_timer_sync.cpp  main_timer_sync.h  performance.cpp  performance.h  splash.h.cmake  splash_editor.h.cmake
modules/: CMakeLists.txt  register_module_types.cpp.cmake  register_module_types.h
plugins/: CMakeLists.txt  plugin_registry.cpp  plugin_registry.h  plugin_registry_interface.h  static_plugin_registry.cpp.in
scene/: CMakeLists.txt  property_utils.cpp  property_utils.h  register_scene_types.cpp  register_scene_types.h  scene_string_names.cpp  scene_string_names.h
servers/: CMakeLists.txt  arvr_server.cpp  arvr_server.h  audio_server.cpp  audio_server.h  camera_server.cpp  camera_server.h  camera_server_enum_casters.h  navigation_2d_server.cpp  navigation_2d_server.h  navigation_server.cpp  navigation_server.h  navigation_serverv.cpp  physics_2d_server.cpp  physics_2d_server.h  physics_server.cpp  physics_server.h  physics_server_2d.cpp  physics_server_2d.h  physics_server_3d.cpp  physics_server_3d.h  register_server_types.cpp  register_server_types.h  rendering_server.cpp  rendering_server.h  rendering_server_callbacks.cpp  rendering_server_callbacks.h  rendering_server_enum_casters.h  rendering_server_enums.h  server_wrap_mt_common.h  visual_server.cpp  visual_server.h  visual_server_enum_casters.h  visual_server_enums.h
utils/: CMakeLists.txt  license_to_header.cpp  make_binders.cpp  shader_to_header.cpp
(+2895 files in other folders)
